<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separador_largo"
        android:layout_marginLeft="@dimen/separador_largo"
        android:layout_marginEnd="@dimen/separador_largo"
        android:layout_marginRight="@dimen/separador_largo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/almacen_origen"
            android:textSize="@dimen/texto_grande"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/spAlmacenO"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spAlmacenO" />

        <Spinner
            android:id="@+id/spAlmacenO"
            android:layout_width="@dimen/spinners_dimen"
            android:layout_height="@dimen/spinner_ancho"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separador_largo"
        android:layout_marginLeft="@dimen/separador_largo"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/separador_largo"
        android:layout_marginRight="@dimen/separador_largo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/almacen_destino"
            android:textSize="@dimen/texto_grande"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/spAlmacenD"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spAlmacenD" />

        <Spinner
            android:id="@+id/spAlmacenD"
            android:layout_width="@dimen/spinners_dimen"
            android:layout_height="@dimen/spinner_ancho"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/cbTipoBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separador_largo"
        android:layout_marginLeft="@dimen/separador_largo"
        android:layout_marginTop="@dimen/separador_largo"
        android:text="@string/tipo_busqueda"
        android:textSize="@dimen/texto_grande"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separador_largo"
        android:layout_marginLeft="@dimen/separador_largo"
        android:layout_marginTop="@dimen/separador_largo"
        android:layout_marginEnd="@dimen/separador_largo"
        android:layout_marginRight="@dimen/separador_largo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTipoBusqueda">

        <EditText
            android:id="@+id/edtCodigo"
            android:layout_width="@dimen/spinners_dimen"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/codigo"
            android:inputType="textPersonName"
            android:textSize="@dimen/texto_grande"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnCamara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/separador_corto"
            android:layout_marginLeft="@dimen/separador_corto"
            android:src="@drawable/ic__camera_24"
            app:layout_constraintBottom_toBottomOf="@+id/edtCodigo"
            app:layout_constraintStart_toEndOf="@+id/edtCodigo"
            app:layout_constraintTop_toTopOf="@+id/edtCodigo" />

        <ImageButton
            android:id="@+id/btnBusqueda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/separador_corto"
            android:layout_marginLeft="@dimen/separador_corto"
            android:src="@drawable/ic_manage_search_24"
            app:layout_constraintBottom_toBottomOf="@+id/btnCamara"
            app:layout_constraintStart_toEndOf="@+id/btnCamara"
            app:layout_constraintTop_toTopOf="@+id/btnCamara" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separador_largo"
        android:layout_marginLeft="@dimen/separador_largo"
        android:layout_marginTop="@dimen/separador_largo"
        android:hint="@string/descripcion"
        android:textSize="@dimen/texto_grande"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separador_largo"
        android:layout_marginLeft="@dimen/separador_largo"
        android:layout_marginTop="@dimen/separador_largo"
        android:layout_marginEnd="@dimen/separador_largo"
        android:layout_marginRight="@dimen/separador_largo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion">

        <EditText
            android:id="@+id/edtCantidad"
            android:layout_width="@dimen/spinners_dimen"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cantidad"
            android:inputType="textPersonName"
            android:textSize="@dimen/texto_grande"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtUnidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/separador_corto"
            android:layout_marginLeft="@dimen/separador_corto"
            android:hint="@string/unidad"
            android:textSize="@dimen/texto_grande"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/edtCantidad"
            app:layout_constraintStart_toEndOf="@+id/edtCantidad"
            app:layout_constraintTop_toTopOf="@+id/edtCantidad" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separador_largo"
        android:src="@drawable/ic_save_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/separador_largo"
        android:layout_marginRight="@dimen/separador_largo"
        android:clickable="true"
        android:src="@drawable/ic_paste_search_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
</androidx.constraintlayout.widget.ConstraintLayout>